fixed #2529937 gets stuck at min. fixed #2529852 drop at noon issue

--- a/src/dial/assets/dial-core.css
+++ b/src/dial/assets/dial-core.css
@@ -34,6 +34,18 @@ v\:fill {
 	top:0;
 	left:0;
 }
-.yui3-dial-hidden {
-	visibility:hidden;
+.yui3-skin-sam .yui3-dial-hidden {
+	/*visibility:hidden;*/
+	display:none;
+	/*
+	left:-10000px;
+	zoom:1;	opacity:0;
+	filter:alpha(opacity=0);
+	border:solid 20px red;
+	display:none;*/
 }
+/*.yui3-dial-marker-vml{
+	opacity:1;
+	filter:alpha(opacity=100);
+	zoom:1;
+}*/
